# ap_features

./: .buildinfo  .bumpversion.cfg  .cspell_dict.txt  .gitignore  .pre-commit-config.yaml  AUTHORS.html  AUTHORS.md  CITATION.cff  CONTRIBUTING.html  CONTRIBUTING.md  HISTORY.md  INSTALL.html  LICENSE  MANIFEST.in  Makefile  README.html  README.md  _config.yml  _toc.yml  ap_features.html  conf.py  cspell.config.yaml  demo_fitzhugh_nagumo.html  genindex.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements_dev.txt  search.html  searchindex.js  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build_docs.yml  coverage.yml  deploy.yml  github-pages.yml  main.yml  pypi.yml
_modules/: index.html
_modules/ap_features/: _numba.html  average.html  background.html  beat.html  chopping.html  features.html  filters.html  lib.html  plot.html  testing.html  utils.html
_sources/: AUTHORS.md  CONTRIBUTING.md  INSTALL.md  README.md  ap_features.rst  demo_fitzhugh_nagumo.ipynb  modules.rst
ap_features/: __init__.py  ap_features.py
build_utils/: build_libomp.sh
demo/: fitzhugh_nagumo.py  mps_data.py
demo/beeler_reuter/: CMakeLists.txt  README.md  beeler_reuter_1977.cellml  beeler_reuter_1977_version06.h  beeler_reuter_1977_version06.ode  beeler_reuter_1977_version06.py  cmodel.py  demo.c  demo_c.py  demo_python.py
docs/: INSTALL.md  Makefile  USAGE.md  _config.yml  _toc.yml  api.rst  conf.py  demo_fitzhugh_nagumo.ipynb  features.ipynb  index.rst  installation.rst  make.bat  usage.rst
src/: CMakeLists.txt  common.h  cost_terms.c  cost_terms.h
src/ap_features/: __init__.py  _numba.py  average.py  background.py  beat.py  chopping.py  features.py  filters.py  plot.py  utils.py
src/c/: .clang-format  CMakeLists.txt  Makefile  ap_features.c  common.h  cost_terms.c  cost_terms.h  cost_terms_main.c
src/c/cmake/: BuildType.cmake
src/python/ap_features/: __init__.py  _c.py  _numba.py  ap_features.py  average.py  background.py  beat.py  chopping.py  features.py  filters.py  lib.py  plot.py  testing.py  utils.py
tests/: __init__.py  conftest.py  cost_terms.npy  data.npy  real_data.npy  test_ap_features.py  test_average.py  test_background.py  test_beat.py  test_chopping.py  test_features.py  test_filters.py  test_plot.py
