[metadata]
author = Henrik Finsberg, Kristian G. Hustad
author_email = henriknf@simula.no
keywords = action potential, cell models, features
name = ap_features
url = https://github.com/ComputationalPhysiology/ap_features
long_description = file: README.md
long_description_content_type = text/markdown
description = Package to compute features of traces from action potential models
license = GNU General Public License v3 (GPLv3)
license_file = LICENSE


[options]
package_dir=
    =src/python
packages = find:
zip_safe = False
install_requires =
    numpy
    numba
    tqdm
    scipy
python_requires = >=3.6

[options.packages.find]
where=src/python


[options.extras_require]
all =
    flake8
    isort
    mypy
    ipython
    pdbpp
    pytest
    pytest-cov
    pre-commit
    black

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88
skip=venv


[flake8]
exclude = docs
ignore = E203, E266, E501, W503, E731
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4

[aliases]
# Define setup.py command aliases here
test = pytest

[tool:pytest]
addopts = --cov=src/python/ap_features --cov-report html --cov-report xml --cov-report term-missing -v
testpaths =
	tests

[mypy]
files=src/python/ap_features,tests
ignore_missing_imports=true
exclude =docs
