[metadata]
name = ap_features
description = Package to compute features of traces from action potential models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ComputationalPhysiology/ap_features
author = Henrik Finsberg, Kristian G. Hustad
author_email = henriknf@simula.no
license = LGPL-2.1
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
keywords = action potential, cell models, features

[options]
packages = find:
install_requires =
    matplotlib
    numpy
    scipy
    tqdm
python_requires = >=3.6
package_dir =
    =src/python
zip_safe = False

[options.packages.find]
where = src/python

[options.extras_require]
dev =
    black
    bump2version
    flake8
    ipython
    mypy
    numba
    pdbpp
    pre-commit
    twine
docs =
    Sphinx
    jupyter-book
    numba
    pandoc
numba =
    numba
plot =
    matplotlib
test =
    black
    dask[array]
    flake8
    h5py
    jupytext
    matplotlib
    mypy
    numba
    pytest
    pytest-cov
    pytest-env

[flake8]
exclude = docs
ignore = E203, E266, E501, W503, E731
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4

[aliases]
test = pytest

[tool:pytest]
addopts = --cov=src/python/ap_features --cov-report html --cov-report xml --cov-report term-missing -v
testpaths =
    tests
env =
    NUMBA_DISABLE_JIT=1

[mypy]
files = src/python/ap_features,tests
ignore_missing_imports = true
exclude = docs
